--- a/apps/web/.env.production
+++ b/apps/web/.env.production
@@ -5,6 +5,7 @@ NEXT_PUBLIC_API_URL=https://your-backend.vercel.app
 
 # Clerk Configuration
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_bW9kZXJuLXJhY2Nvb24tNDQuY2xlcmsuYWNjb3VudHMuZGV2JA
+CLERK_SECRET_KEY=sk_test_LhfTufzOwMcyZxU1zczoDTDu7EyC5RRBZPcmWm4Rl0
 
 # Clerk URLs
 NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
